--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,7 +26,7 @@
     </resource-ref>
     <error-page>
         <exception-type>java.lang.Throwable</exception-type>
-        <location>/error_page.jsp</location>
+        <location>/error.page.jsp</location>
     </error-page>
     <error-page>
         <error-code>404</error-code>
