--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
     </context-param>
   <context-param>
         <param-name>javax.servlet.jsp.jstl.fmt.locale</param-name>
-        <param-value>en</param-value>
+        <param-value>uk</param-value>
     </context-param>
    <context-param>
         <param-name>locales</param-name>
