--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -1,24 +1,175 @@
+account_create_form.title = Add account
+account_create_form.name = Name
+account_create_form.uid = UID
+account_create_form.currency = Currency
+account_create_form.submit = Submit
 
-header_jspf.anchor.all_orders = All orders
-header_jspf.anchor.login      = Login
-header_jspf.anchor.logout     = Logout
-header_jspf.anchor.menu       = Menu
-header_jspf.anchor.settings   = Settings
+card_create_from.title = Add card
+card_create_from.card_name = Name
+card_create_from.card_number = Card number
+card_create_from.expiration_date = Expiration date
+card_create_from.submit = Submit
 
-list_menu_jsp.button.make_an_order = Make an order
-list_menu_jsp.table.header.name    = Name
-list_menu_jsp.table.header.order   = Order
-list_menu_jsp.table.header.price   = Price
+item_per_page.items_per_page = items per page
+item_per_page.all_items = All items
 
-list_orders_jsp.table.header.bill = Bill
-list_orders_jsp.table.header.client = Client
-list_orders_jsp.table.header.status = Status
+navigation.navbar.users = Users
+navigation.navbar.accounts = Accounts
+navigation.navbar.payments = Payments
+navigation.navbar.cards = Cards
+navigation.navbar.logout = Logout
+navigation.user.info.title = Information
+navigation.user.info.language.english = English
+navigation.user.info.language.ukrainian = Ukrainian  
+navigation.user.info.login = Login
+navigation.user.info.first_name = First name
+navigation.user.info.last_name = Last name
+navigation.user.info.day_of_birth = Day of birth
+navigation.user.info.logout = Logout
 
-login_jsp.button.login = Login
-login_jsp.label.login  = Login
-login_jsp.label.password = Password
+access_denied.title = Access denied
+access_denied.header = Access to this page is restricted
+access_denied.message = You don't have access to this page
 
-settings_jsp.button.update = Update
-settings_jsp.label.first_name = First name
-settings_jsp.label.last_name = Last name
-settings_jsp.label.localization = Localization
+error_page.title = Error!
+
+form_create_payment.title = Payment page
+form_create_payment.sender.title = From
+form_create_payment.recipient.title = To
+form_create_payment.recipient.type.card = Card
+form_create_payment.recipient.type.account = Account
+form_create_payment.recipient.check = Check
+form_create_payment.recipient.unknown_user = Unknown user
+form_create_payment.recipient.status.ready = Ready
+form_create_payment.recipient.status.submitted = Submitted
+form_create_payment.recipient.currency = Currency
+form_create_payment.recipient.sum = Sum
+form_create_payment.recipient.calculate = Calculate
+form_create_payment.recipient.commission = Commission
+form_create_payment.recipient.total = Total
+form_create_payment.recipient.submit = Submit payment
+
+form_create_user.title = Register vPay
+form_create_user.user.title = Registration form
+form_create_user.user.photo = Photo
+form_create_user.user.login = Login
+form_create_user.user.password = Password
+form_create_user.user.confirm_password = Confirm password
+form_create_user.user.email = Email
+form_create_user.user.first_name = First name
+form_create_user.user.last_name = Last name
+form_create_user.user.date_of_birth = Date of birth
+form_create_user.user.sex = Sex
+form_create_user.user.sex.male = Male
+form_create_user.user.sex.female = Female
+form_create_user.user.sex.other = Other
+form_create_user.user.submit = Register
+
+index.login_page.title = Login vPay
+index.login_page.login = Username
+index.login_page.password = Password
+index.login_page.submit = Login
+index.login_page.registration = Registration
+
+list_accounts.title = Account page
+list_accounts.sort.by_name = Sort by Name
+list_accounts.sort.by_balance = Sort by Balance
+list_accounts.sort.by_uid = Sort by UID
+list_accounts.add_account = Add account
+list_accounts.table.header.name = Name
+list_accounts.table.header.uid = UID
+list_accounts.table.header.currency = Currency
+list_accounts.table.header.balance = Balance
+list_accounts.table.header.owner = Owner
+list_accounts.table.header.status = Status
+list_accounts.table.header.action = Action
+list_accounts.table.header.card = Card
+
+list_cards.title = Card page
+list_cards.sort.by_name = Sort by Name
+list_cards.sort.by_number = Sort by Number
+list_cards.sort.by_account = Sort by Account name
+list_cards.add_card = Add payment card
+list_cards.table.header.name = Name
+list_cards.table.header.number = Number
+list_cards.table.header.exp_date = Expiration date
+list_cards.table.header.owner = Owner
+list_cards.table.header.status = Status
+
+list_payments.title = Payment page
+list_payments.sort.by_guid = Sort by Guid
+list_payments.sort.by_total = Sort by Total
+list_payments.sort.by_acs_time = Sort by Asc Time
+list_payments.sort.by_des_time = Sort by Des Time
+list_payments.create_payment = Create payment
+list_payments.table.header.datetime = Date Time
+list_payments.table.header.guid = GUID
+list_payments.table.header.user = User
+list_payments.table.header.sender = Sender
+list_payments.table.header.recipient = Recipient
+list_payments.table.header.currency = Currency
+list_payments.table.header.commission = Commission
+list_payments.table.header.total = Total
+list_payments.table.header.status = Status
+list_payments.table.header.action = Action
+
+list_users.title = User page
+list_users.sort.by_login = Sort by Login
+list_users.sort.by_first_name = Sort by First Name
+list_users.sort.by_last_name = Sort by Last Name
+list_users.table.header.photo = Photo
+list_users.table.header.login = Login
+list_users.table.header.first_name = First Name
+list_users.table.header.last_name = Last Name
+list_users.table.header.role = Role
+list_users.table.header.date_of_birth = Date of birth
+list_users.table.header.sex = Sex
+list_users.table.header.status = Status
+
+pdf.system.name = vPAY | MONEY TRANSFER SERVICE
+pdf.company.name = vPay System ltd.
+pdf.company.phone = Tel. 08001234321
+pdf.company.address = Address: Kyiv, Khreshatyk 1, 01000
+pdf.body.payment = Payment
+pdf.body.from = from
+pdf.body.sender.title = Sender
+pdf.body.sender.account = Account
+pdf.body.sender.sum = Sum of transaction
+pdf.body.sender.commission = Commission
+pdf.body.sender.total = Total
+pdf.body.sender.datetime_title = Date and time of transaction
+pdf.body.recipient.title = Recipient
+pdf.body.recipient.type = type
+pdf.body.recipient.number = number
+pdf.body.recipient.sum = Sum for recipient
+
+javascript.pagination.previous = Previous
+javascript.pagination.page = Page
+javascript.pagination.of = of
+javascript.general.enabled = Enabled
+javascript.general.disabled = Disabled
+javascript.general.language.message = Language is changed
+javascript.account.table.status.disable = Disable Account
+javascript.account.table.status.enable = Enable Account
+javascript.account.table.status.waiting = Waiting for enable
+javascript.account.table.card.label = Added card to account
+javascript.account.table.card.button = Apply
+javascript.account.table.action.top_up = Top up
+javascript.account.table.action.remove = Remove
+javascript.account.table.action.card = Card
+javascript.account.pagination.next = Next
+javascript.account.select_card.message = Success! Card is changed
+javascript.account.coin_function.message = Success! Balance is changed
+javascript.account.remove.message = Success! Account was deleted
+javascript.account.status.modal.message = Account status will be changed. Are you sure?
+javascript.account.coin_function.modal.message = How much money do you want to add?
+javascript.account.remove.modal.message = Do you want to delete this account?
+javascript.card.status.modal = Card status will be changed. Are you sure?
+javascript.payment.status.ready = Ready
+javascript.payment.status.submitted = Submitted
+javascript.payment.delete.message = Success! Payment was deleted
+javascript.payment.status.modal.message = Payment status will be changed to submit. Are you sure?
+javascript.user.table.status.enable = Enable User
+javascript.user.table.status.disable = Disable User
+javascript.user.status.modal.message = User status will be changed. Are you sure?
+javascript.user.role.modal.message = User role will be changed. Are you sure?
