--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -190,3 +190,73 @@ error.user.create.last_name = "Last name incorrect"
 error.user.create.email = "Incorrect email address"
 error.user.create.password = "Password must have: more then 4 symbols; 1 lowercase letter; 1 uppercase letter; 1 symbol"
 error.user.create.confirm_password = "Password mismatch, please check password and confirm password"
+
+exception.dao.account.insert = "Can't insert account"
+exception.dao.account.delete = "Can't delete account"
+exception.dao.account.find_all_account = "Can not find all accounts"
+exception.dao.account.find_by_id = "Can not find account by id"
+exception.dao.account.update_balance = "Can't update account balance" 
+exception.dao.account.update_card = "Can't update account card"
+exception.dao.account.find_by_user = "Can't find accounts for this user"
+exception.dao.account.update_status = "Can't update account status"
+exception.dao.account.find_by_uid = "Can't find account by UID"
+exception.dao.account.load_row = "Can't read data from DB, table: account"
+
+exception.dao.card.insert = "Can not insert card to DB"
+exception.dao.card.find_all_card = "Can not find any cards in DB"
+exception.dao.card.find_by_id = "Can not find card by id in DB"
+exception.dao.card.find_card = "Can not find cards in DB"
+exception.dao.card.update_status = "Can not update status card by id in DB"
+exception.dao.card.load_row = "Can not load card from DB"
+
+exception.dao.payment.find_all_payment = "Payments not found in DB"
+exception.dao.payment.find_by_id = "Payment not found by ID"
+exception.dao.payment.find_by_user = "Payment not found by User"
+exception.dao.payment.update_status = "Can not update status payment"
+exception.dao.payment.insert = "Can not insert payment in DB"
+exception.dao.payment.delete = "Payment wasn't deleted"
+exception.dao.payment.load_row = "Can nor read payment from DB"
+
+exception.dao.user.insert = "Not inserted user to DB"
+exception.dao.user.find_by_id = "Not found user by id in DB"
+exception.dao.user.find_by_account_uid = "Not found user by account UID in DB"
+exception.dao.user.find_all = "Not found users in DB"
+exception.dao.user.find_by_login = "Not found user by login in DB"
+exception.dao.user.update_status = "Not updated status user by id in DB"
+exception.dao.user.update_role = "Not updated user role by id in DB"
+exception.dao.user.update_locale = "Not updated user locale by id in DB"
+exception.dao.user.load_row = "Not loaded row for user from DB"
+
+exception.service.account.lock = "Can not find account for locking"
+exception.service.account.create.name = "Name must be less than 25 symbols"
+exception.service.account.delete = "Cannot delete account status"
+exception.service.account.change.incorrect_user = "Incorrect user account id"
+exception.service.account.change.not_found = "Not found account by id"
+exception.service.account.change.not_change = "Cannot change account status"
+exception.service.account.info.no_card = "Account does not have card"
+exception.service.account.info.not_found = "Account does not find"
+
+exception.service.card.bad_card = "Bad card number"
+
+exception.service.payment.insert = "Please, check payment value, payment can't be null"
+exception.service.payment.change_status.null = "Payment can not be submitted."
+exception.service.payment.change_status.no_money = "Not enough funds in the account"
+exception.service.payment.change_status.no_ready = "Payment had been submitted before"
+exception.service.payment.change_status.error = "Payment can not be submitted."
+exception.service.payment.delete.error = "Payment can not be deleted."
+exception.service.payment.calc.sum_more_then = "Sum must be more than "
+exception.service.payment.calc.sum_less_then = " and less than "
+exception.service.payment.calc.sum_incorrect = "Incorrect sum value"
+exception.service.payment.calc.account_not_found = "Account not found"
+exception.service.payment.create.sum_more_then = "Sum must be more than "
+exception.service.payment.create.sum_less_then = " and less than "
+exception.service.payment.create.sum_incorrect = "Incorrect sum value"
+exception.service.payment.create.account_is_locked = "Your account is locked. You can't create payment."
+exception.service.payment.create.no_money = "Not enough funds in the account"
+exception.service.payment.create.account_not_found = "Account not found"
+
+
+
+
+
+
