--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -229,7 +229,7 @@ exception.dao.user.load_row = "Not loaded row for user from DB"
 
 exception.service.account.lock = "Can not find account for locking"
 exception.service.account.create.name = "Name must be less than 25 symbols"
-exception.service.account.delete = "Cannot delete account status"
+exception.service.account.delete = "Cannot delete account "
 exception.service.account.change.incorrect_user = "Incorrect user account id"
 exception.service.account.change.not_found = "Not found account by id"
 exception.service.account.change.not_change = "Cannot change account status"
